# ai2-kit

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  ai2-kit  ai2-kit.ps1  genindex.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  doc.yml
_api/: ai2_kit.algorithm.aos_analysis.html  ai2_kit.algorithm.html  ai2_kit.algorithm.proton_transfer.html  ai2_kit.algorithm.reweighting.html  ai2_kit.algorithm.uninmr.data.conformer_dataset.html  ai2_kit.algorithm.uninmr.data.cropping_dataset.html  ai2_kit.algorithm.uninmr.data.distance_dataset.html  ai2_kit.algorithm.uninmr.data.html  ai2_kit.algorithm.uninmr.data.key_dataset.html  ai2_kit.algorithm.uninmr.data.lattice_dataset.html  ai2_kit.algorithm.uninmr.data.lmdb_dataset.html  ai2_kit.algorithm.uninmr.data.mask_points_chunk_dataset.html  ai2_kit.algorithm.uninmr.data.mask_points_dataset.html  ai2_kit.algorithm.uninmr.data.normalize_dataset.html  ai2_kit.algorithm.uninmr.data.pad_dataset.html  ai2_kit.algorithm.uninmr.data.remove_hydrogen_dataset.html  ai2_kit.algorithm.uninmr.data.resample_dataset.html  ai2_kit.algorithm.uninmr.data.select_token_dataset.html  ai2_kit.algorithm.uninmr.html  ai2_kit.algorithm.uninmr.infer.html  ai2_kit.algorithm.uninmr.losses.atom_regloss.html  ai2_kit.algorithm.uninmr.losses.html  ai2_kit.algorithm.uninmr.losses.regloss.html  ai2_kit.algorithm.uninmr.losses.unimat.html  ai2_kit.algorithm.uninmr.losses.unimat_rcut.html  ai2_kit.algorithm.uninmr.models.html  ai2_kit.algorithm.uninmr.models.transformer_encoder_with_pair.html  ai2_kit.algorithm.uninmr.models.unimat.html  ai2_kit.algorithm.uninmr.tasks.html  ai2_kit.algorithm.uninmr.tasks.unimat.html  ai2_kit.algorithm.uninmr.tasks.unimat_rcut.html  ai2_kit.algorithm.uninmr.tasks.uninmr.html  ai2_kit.algorithm.uninmr.utils.data_preparation.html  ai2_kit.algorithm.uninmr.utils.data_preparation.nmrshiftdb2_2018.html  ai2_kit.algorithm.uninmr.utils.data_preparation.nmrshiftdb2_2024.html  ai2_kit.algorithm.uninmr.utils.data_preparation.qm9nmr.html  ai2_kit.algorithm.uninmr.utils.data_preparation.write_lmdb.html  ai2_kit.algorithm.uninmr.utils.data_scaler.html  ai2_kit.algorithm.uninmr.utils.get_result.html  ai2_kit.algorithm.uninmr.utils.html  (+68 more)
_downloads/0837123f61bb33ef1ff44e21c6238e65/: fep_mlp.py
_modules/: index.html
_modules/ai2_kit/: main.html
_sources/_api/: ai2_kit.algorithm.aos_analysis.rst  ai2_kit.algorithm.proton_transfer.rst  ai2_kit.algorithm.reweighting.rst  ai2_kit.algorithm.rst  ai2_kit.algorithm.uninmr.data.conformer_dataset.rst  ai2_kit.algorithm.uninmr.data.cropping_dataset.rst  ai2_kit.algorithm.uninmr.data.distance_dataset.rst  ai2_kit.algorithm.uninmr.data.key_dataset.rst  ai2_kit.algorithm.uninmr.data.lattice_dataset.rst  ai2_kit.algorithm.uninmr.data.lmdb_dataset.rst  ai2_kit.algorithm.uninmr.data.mask_points_chunk_dataset.rst  ai2_kit.algorithm.uninmr.data.mask_points_dataset.rst  ai2_kit.algorithm.uninmr.data.normalize_dataset.rst  ai2_kit.algorithm.uninmr.data.pad_dataset.rst  ai2_kit.algorithm.uninmr.data.remove_hydrogen_dataset.rst  (+93 more)
ai2_kit/: main.py
doc/: _config.yml  _toc.yml  intro.md  references.bib
doc/manual/: ase.md  (+38 more)
example/: show.ipynb  show_03ai2-kit.ipynb  show_lmbtr.ipynb  show_xyz.ipynb
jupyter-book/: _config.yml  _toc.yml  intro.md  references.bib
manual/: ase.html  checkpoint.html  cll-workflow.html  cll-workflow.zh.html  fep-workflow.html  proton-transfer.html  tips.html
notebook/: ai2cat.html  ai2cat.ipynb
tests/: all-in-one.yaml  test_bash.py  test_core.py  test_data.py  test_dplr.py  test_md_spectra.py  test_reweighting.py  test_util.py
(+770 files in other folders)
