[tool.poetry]
name = "ai2-kit"
version = "0.11.2"
description = ""
authors = ["weihong.xu <xuweihong.cn@gmail.com>"]
readme = "README.md"
packages = [{include = "ai2_kit"}]
include = ["ai2_kit/res/*"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.5.0"
fabric = "^2.7.1"
pydantic = "^1.10.2"
invoke = "^1.7.3"
ruamel-yaml = "^0.17.21"
cloudpickle = "^2.2.0"
shortuuid = "^1.0.11"
dpdata = "^0.2.16"
pandas = "^1.5.3"
ase = "^3.22.1"
pymatgen = "^2023.2.22"
mdanalysis = "^2.4.3"
allpairspy = "^2.5.0"
tabulate = "^0.9.0"
asaplib = "^0.0.2"
joblib = "^1.2.0"
dscribe = "1.2.2"
jupyter-formily = "0.0.7"
ipympl = "^0.9.3"


[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
priority = "default"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
pytest = "^7.2.0"

[tool.poetry.group.doc.dependencies]
jupyter-book = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai2-kit = "ai2_kit.main:main"
ai2-cat = "ai2_kit.feat.catalysis:cli_main"
