[tool.poetry]
name = "ai2-kit"
version = "0.21.0"
description = ""
authors = ["weihong.xu <xuweihong.cn@gmail.com>"]
readme = "README.md"
packages = [{include = "ai2_kit"}]
include = ["ai2_kit/res/*"]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.5.0"
fabric = "^2.7.1"
pydantic = "2.8.2"
invoke = "^1.7.3"
ruamel-yaml = "^0.17.21"
cloudpickle = "^2.2.0"
shortuuid = "^1.0.11"
dpdata = "0.2.18"
pandas = "^1.5.3"
ase = "^3.22.1"
pymatgen = "^2023.2.22"
mdanalysis = "^2.4.3"
allpairspy = "^2.5.0"
tabulate = "^0.9.0"
joblib = "^1.2.0"

asaplib = {version = "^0.0.2", optional = true}
dscribe = {version = "1.2.2", optional = true}
jupyter-formily = {version = "0.0.7", optional = true}
ipympl = {version = "^0.9.3", optional = true}
scipy = "^1.13.0"
psutil = "^5.9.8"

netcdf4 = "^1.7.1.post1"
[tool.poetry.extras]
all = ["dscribe", "jupyter-formily", "ipympl", "asaplib"]


[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
priority = "default"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
pytest = "^7.2.0"

[tool.poetry.group.doc.dependencies]
jupyter-book = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai2-kit = "ai2_kit.main:main"
ai2-cat = "ai2_kit.feat.catalysis:cli_main"
ai2-spectr = "ai2_kit.feat.spectrum:cli_main"

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
explicit-preview-rules = true
ignore = ["E741", "F541", "F841"]
extend-select = ["PLR1704"]
